# letterboxd-scraper

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: analyze-ratings-progress.yml  autoformat-agent.yml  bootstrap-project.yml  ci.yml  compare-lists.yml  debug-filtered-pages.yml  debug-letterboxd-filter.yml  diagnose-2026-catalog.yml  diagnose-2026-filter.yml  diagnose-members-endpoints.yml  export-other-list.yml  generate-2026-non-us-over10k.yml  generate-top10-by-country.yml  live-library-smoke.yml  publish.yml  smoke-2026-export.yml  verify-pypi-020.yml
bootstrap_parts/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07
docs/: API.md  ARCHITECTURE.md  COUNTRY_EXPORT.md  SCRAPING_NOTES.md  VALIDATED_FAILURE_MODES.md
examples/: popular-not-beloved.toml  watch-band.toml.example
input/: ratings.csv
scripts/: analyze_ratings_progress.py  combine_top10_by_country_shards.py  compare_lists.py  debug_filtered_pages.py  debug_letterboxd_filter.py  export_other_list.py  generate_2026_non_us_live.py  generate_2026_non_us_over10k.py  generate_top10_by_country.py  generate_top10_by_country_shard.py  run_fast_top10_country_shard.py  run_live_library_smoke.py
src/letterboxd_scraper/: __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  exceptions.py  film_resolver.py  http.py  list_scraper.py  models.py  output.py  parsing.py  pipeline.py  validation.py
tests/: test_api.py  test_cache.py  test_config.py  test_list_scraper.py  test_output.py  test_parsing.py  test_pipeline.py  test_validation.py
